--- a/style.css
+++ b/style.css
@@ -150,3 +150,68 @@
         max-width: 40rem !important ;
     }
 }
+
+form{
+    font-family: 'Open Sans';
+    font-weight: 400;
+    font-size: 0.8rem;
+    padding: 1.8rem 0 1.8rem 1.8rem;
+    margin: 1rem auto;
+    max-width: 50%;
+}
+fieldset{
+    border: none;
+}
+fieldset div:last-child{
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
+legend{
+    font-size: 1.8rem;
+    margin-bottom: 1.5rem;
+    text-align: center;
+    font-family: 'Open Sans';
+    font-weight: 300;
+    color: black;
+    text-transform: uppercase;
+}
+label{
+    color: black;
+    text-transform: uppercase;
+}
+input{
+    height: 30px;
+    margin: 0 0 10px 10px;
+    border: 1px solid black;
+    padding: 15px;
+    font-family: 'Open Sans';
+    font-size: 14px;
+    color: black;
+}
+input:focus, textarea:focus{
+    outline: none;
+    border: 1px solid rgb(111, 111, 116);
+}
+.btn-send{
+    padding: 0 50px;
+    border: black 2px solid;
+    color: white;
+    font-family: 'Inter Tight';
+    text-transform: uppercase;
+    background-color: black;
+}
+.btn-send:hover{
+    background-color: white;
+    color: black;
+} */
+svg{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+} */
+textarea {
+    resize: none;
+    margin-left: 10px;
+  }
