--- a/style.css
+++ b/style.css
@@ -200,7 +200,7 @@ textarea {
         text-align: start;
     }
     .carousel-inner{
-        margin-top: 40px;
+        margin-top: 4rem;
     }
     .imgp{
         margin-top: 4rem;
