--- a/style.css
+++ b/style.css
@@ -27,7 +27,7 @@
     max-width: 90%;
     max-height: 100%;
 }
-
+ 
 .img1{
     overflow: hidden;
     position: relative;
@@ -177,6 +177,9 @@ textarea {
 }
 .btn-espe button{
     margin: 2%;
+}
+.cente{
+    text-align: center;
 }
 @media screen and (max-width:768px) 
 {
